--- a/EX 3/main2.css
+++ b/EX 3/main2.css
@@ -85,3 +85,10 @@ li{
     border-bottom: 1px solid rgb(188, 179, 179);
     padding: 8px 0px;
 }
+
+@media (max-width: 700px) {
+    .pricing-container {
+        flex-direction: column;
+        align-items: center;
+    }
+}
